<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_homework"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="milan.hva.com.homework.AddHomeworkActivityFragment"
    tools:showIn="@layout/activity_add_homework">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="25sp"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="25sp"
        android:text="@string/enter_name"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="25sp"
        android:layout_below="@+id/edit_title"
        android:text="@string/subject"/>

    <EditText
        android:id="@+id/edit_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="25sp"
        android:text="@string/enter_subject"
        android:layout_below="@+id/subject"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="25sp"
        android:layout_below="@+id/edit_subject"
        android:text="@string/date"/>

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="25sp"
        android:inputType="date"
        android:text="@string/enter_date"
        android:layout_below="@+id/date"
        android:layout_alignParentStart="true"/>
</RelativeLayout>
